| Summary: | ASTERISK-25115: Crash related to func sip_resolve_invoke_user_callback of res_pjsip/pjsip_resolver.c | ||
| Reporter: | John Bigelow (jbigelow) | Labels: | |
| Date Opened: | 2015-05-21 13:13:22 | Date Closed: | 2015-06-11 18:45:16 |
| Priority: | Major | Regression? | No |
| Status: | Closed/Complete | Components: | Resources/res_pjsip |
| Versions: | SVN | Frequency of Occurrence | Occasional |
| Related Issues: | |||
| Environment: | Asterisk git master branch, Debian squeeze, 32bit, lib unbound 1.5.3, pjproject trunk r5099 | Attachments: | ( 0) backtrace_13226.txt ( 1) full.txt |
| Description: | While exercising a testsuite test for testing SRV priority (https://gerrit.asterisk.org/#/c/505/), I occasionally experienced Asterisk crashing. Backtrace and full log is attached.
This was also shown: {noformat} May 21 11:40:44] WARNING[23341]: asterisk:127 errReceived: Asterisk 127.0.0.1 received error: asterisk: ../src/pj/os_core_unix.c:1309: pj_mutex_unlock: Assertion `mutex->owner == pj_thread_this()' failed. {noformat} | ||
| Comments: | By: Michaƫl Arnauts (michaelarnauts) 2016-09-25 15:17:15.497-0500 This exact crash just happened on my asterisk 13.11.2~dfsg-0~ppa1 (from https://launchpad.net/~jan-hoffmann/+archive/ubuntu/asterisk13). It it supposed to be fixed in this version? | ||